29th of September. Some minor changes to web interface

--- a/web/mirrorsetup/templates/mirrorsetup/widget_settings.html
+++ b/web/mirrorsetup/templates/mirrorsetup/widget_settings.html
@@ -4,9 +4,9 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'mirrorsetup/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'mirrorsetup/widget_settings.css'%}">
+    <script type="text/javascript" src="{%  static 'js/widget_settings.js' %}"></script>
     <script type="text/javascript" src="{%  static 'js/jquery-3.5.1.js' %}"></script>
     <script type="text/javascript" src="{%  static 'js/bootstrap.min.js' %}"></script>
-    <script type="text/javascript" src="{%  static 'js/widget_settings.js' %}"></script>
     <title>Параметры виджета</title>
 </head>
 <body hidden>
@@ -15,13 +15,25 @@
     <section class="container-fluid">
         <h1 id="heading"></h1>
         <div class="row">
-            <!-- Rounded switch -->
+
+            <!-- Rounded switch for SHOW WIDGET  -->
             <label class="switch">
               <input type="checkbox" id="showCheckbox" onclick="changeShowStatus()">
               <span class="slider round"></span>
             </label>
-            <span>Виджет показывается</span>
+            <span id="showText"></span>
+
         </div>
+
+        <div class="row">
+            <!-- Rounded switch for ANCHOR -->
+            <label class="switch">
+              <input type="checkbox" id="anchorCheckbox" onclick="changeAnchorStatus()">
+              <span class="slider round"></span>
+            </label>
+            <span id="anchorText"></span>
+        </div>
+
         <div>
         <a class="btn btn-outline-primary btn-lg" id="apply" href="#" onclick="applyChanges()">Применить</a>
         <a class="btn btn-outline-primary btn-lg" id="cancel" href="{% url 'cancel' %}" onclick="window.close()">Отмена</a>
