--- a/web/static/mirrorsetup/main.css
+++ b/web/static/mirrorsetup/main.css
@@ -1,3 +1,23 @@
+#introVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+#introHeader {
+  position: fixed;
+  text-align: center;
+  left: 0%;
+  top: 33%;
+  min-width: 100%;
+  min-height: 100%;
+  font-weight: 900;
+  font-size: 4.5em;
+  color: #fff;
+}
+
 .setupfield {
   border: 5px solid black;
   position: absolute;
@@ -111,6 +131,7 @@ html, body{
 }
 
 .site-footer {
+  z-index: 1;
   height: 50px;
   margin-top: -50px;
 }
@@ -129,8 +150,8 @@ ul {
 }
 
 .header-main {
-  z-index: -2;
   position: absolute;
+  z-index: -2;
   left: 0;
   bottom: 0;
   background-image: url("images/headerback.jpg");
@@ -142,8 +163,8 @@ ul {
 }
 
 .overlay {
-  z-index: -1;
   position: absolute;
+  z-index: -1; 
   height: 100vh;
   min-width: 100%;
   left: 0;
