--- a/web/mirrorsetup/templates/mirrorsetup/widget_settings.html
+++ b/web/mirrorsetup/templates/mirrorsetup/widget_settings.html
@@ -14,15 +14,14 @@
     </div>
     <section class="container-fluid">
         <h1 id="heading"></h1>
-        <div class="row">
 
+        <div class="row">
             <!-- Rounded switch for SHOW WIDGET  -->
             <label class="switch">
               <input type="checkbox" id="showCheckbox" onclick="changeShowStatus()">
               <span class="slider round"></span>
             </label>
             <span id="showText"></span>
-
         </div>
 
         <div class="row">
@@ -33,6 +32,13 @@
             </label>
             <span id="anchorText"></span>
         </div>
+
+        {% if name == "youtube" %}
+            <div class="row" style="margin-bottom: 10px">
+                <span id="defaultVideoText" style="margin-right: 5px">Название видео</span>
+                <input type="text" id="defaultVideoField" value="{{ defaultVideo }}" size="40">
+            </div>
+        {% endif %}
 
         <div>
         <a class="btn btn-outline-primary btn-lg" id="apply" href="#" onclick="applyChanges()">Применить</a>
