WEB WiFi manager is being under construction

--- a/web/wificonfig/templates/wificonfig/status.html
+++ b/web/wificonfig/templates/wificonfig/status.html
@@ -32,7 +32,11 @@
               {% else %}
                 <td>Нет</td>
               {% endif %}
-              <td></td>
+              {% if connected == values.SSID %}
+	        <td>Подключено</td>
+              {% else %}
+	        <td></td>
+              {% endif %}
             </tr>
           {% endfor %}
         {% endif %}
