Web interface WiFi config is added. Lists all the available hotspots. Can be used to connect to one of the hotspots.

--- a/web/wificonfig/templates/wificonfig/config.html
+++ b/web/wificonfig/templates/wificonfig/config.html
@@ -22,7 +22,7 @@
         </div>
 
         <div>
-        <a class="btn btn-outline-primary btn-lg" id="apply" href="#" onclick="connect()">Подключиться</a>
+        <a class="btn btn-outline-primary btn-lg" id="apply" href="#" onclick="connectToSelectedSpot()">Подключиться</a>
         <a class="btn btn-outline-primary btn-lg" id="cancel" href="{% url 'cancel' %}" onclick="window.close()">Отмена</a>
         </div>
     </section>
