--- a/web/wificonfig/templates/wificonfig/status.html
+++ b/web/wificonfig/templates/wificonfig/status.html
@@ -5,46 +5,63 @@
 {% load static %}
 
 {% csrf_token %}
-
-  <section class="wifilist" id="wifilist">
-    <table class="table table-bordered table-hover">
-      <caption>Найденные точки доступа</caption>
-      <thead class="thead-dark">
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Имя точки доступа</th>
-          <th scope="col">Канал</th>
-          <th scope="col">Качество</th>
-          <th scope="col">Шифрование</th>
-          <th scope="col">Статус</th>
-        </tr>
-      </thead>
-      <tbody id="tableBody">
-        {% if status %}
-          {% for index, values in result.items %}
-            <tr id="hotspotNumber-{{ index }}" chosen="false" ssid="{{ values.SSID }}" onclick="clickedHotspot(this.id)">
-              <td>{{ index }}</td>
-              <td>{{ values.SSID }}</td>
-              <td>{{ values.channel }}</td>
-              <td>{{ values.quality }}%</td>
-              {% if values.encryption %}
-                <td>Да</td>
-              {% else %}
-                <td>Нет</td>
-              {% endif %}
-              {% if connected == values.SSID %}
-	        <td>Подключено</td>
-              {% else %}
-	        <td></td>
-              {% endif %}
-            </tr>
-          {% endfor %}
-        {% endif %}
-      </tbody>
-    </table>
-    <button type="button" id="connect" class="btn btn-lg btn-primary" disabled>Выбрать</button>
-  </section>
-
+<div class="container-fluid">
+  <div class="row justify-content-center">
+    <section class="wifilist justify-content-center" id="wifilist">
+      <table class="table table-bordered table-hover">
+        <caption>
+          <table class="table-borderless" style="margin-bottom: 0px">
+            <tbody>
+              <tr>
+                <td>
+                  <div class="spinner-border spinner-border-sm" role="status">
+                    <span class="sr-only">Loading...</span>
+                  </div>
+                </td>
+                <td>
+                  <span class="align-middle">Поиск точек доступа WiFi</span>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </caption>
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Имя точки доступа</th>
+            <th scope="col">Канал</th>
+            <th scope="col">Качество</th>
+            <th scope="col">Шифрование</th>
+            <th scope="col">Статус</th>
+          </tr>
+        </thead>
+        <tbody id="tableBody">
+          {% if status %}
+            {% for index, values in result.items %}
+              <tr id="hotspotNumber-{{ index }}" chosen="false" ssid="{{ values.SSID }}" onclick="clickedHotspot(this.id)">
+                <td>{{ index }}</td>
+                <td>{{ values.SSID }}</td>
+                <td>{{ values.channel }}</td>
+                <td>{{ values.quality }}%</td>
+                {% if values.encryption %}
+                  <td>Да</td>
+                {% else %}
+                  <td>Нет</td>
+                {% endif %}
+                {% if connected == values.SSID %}
+  	        <td>Подключено</td>
+                {% else %}
+  	        <td></td>
+                {% endif %}
+              </tr>
+            {% endfor %}
+          {% endif %}
+        </tbody>
+      </table>
+      <button type="button" id="connect" class="btn btn-lg btn-primary" disabled>Выбрать</button>
+    </section>
+  </div>
+</div>
 {% endblock content %}
 
 {% block javascript %}<script type="text/javascript" src="{%  static 'js/wifi.js' %}"></script>{% endblock %}
